# llms-classwork

./: .gitignore  README.md
logit-tuned-lenses/: README.md  logit_lens.py  pyproject.toml  run_tuned_lens.py  test.ipynb  tuned_results.json
transformer-from-scratch/: README.md  luca-correct.ipynb  luca-gpt1-untrained.py  luca-gpt1.py  luca-untrained.ipynb  pyproject.toml
