[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "firstllm"
version = "0.1.0"
description = "Custom transformer with dynamic vocab and Wikipedia training"
authors = [
	{ name = "Ben Guevel", email = "bguevel@mines.edu" },
  { name = "Luca Burns", email = "lucaburns@mines.edu" },
  { name = "Cole McGuire", email = "cpmcguire@mines.edu" }
]
readme = "README.md"
requires-python = ">=3.11"


dependencies = [
	# standard scientific computing
	"numpy",
	"matplotlib",
	"scipy",
	"ipython",
	"ipykernel",
	"ipywidgets",
	# pytorch and transformers
	"torch",
	"torchvision",
	"jaxtyping",
	"transformer_lens",
	# custom utilities
	"muutils>=0.6.19",
	"zanj>=0.3.1",
	"trnbl>=0.0.2",
	"lmcat",
]

[dependency-groups]
dev = [
	# test
	"pytest>=8.2.2",
	# coverage
	"pytest-cov>=4.1.0",
	"coverage-badge>=1.1.0",
	# type checking
	"mypy>=1.0.1",
	# docs
	'pdoc>=14.6.0',
	# tomli since no tomlib in python < 3.11
	"tomli>=2.1.0; python_version < '3.11'",
]
lint = [
	# lint
	"pycln>=2.1.3",
	"ruff>=0.4.8",
]

[tool.uv]
default-groups = ["dev", "lint"]

[project.urls]
Homepage = "https://github.com/bguevel/LLM1"
Documentation = "https://github.com/bguevel/LLM1"
Repository = "https://github.com/bguevel/LLM1"
Issues = "https://github.com/bguevel/LLM1"

# ruff config
[tool.ruff]
exclude = ["__pycache__"]

[tool.ruff.format]
indent-style = "tab"
skip-magic-trailing-comma = false

# Custom export configurations
[tool.uv-exports]
args = [
	"--no-hashes"
]
exports = [
	# no groups, no extras, just the base dependencies
    { name = "base", groups = false, extras = false },
	# all groups and extras
    { name = "all", filename="requirements.txt", groups = true, extras=true },
]